--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Maximilian Franze-Soeln</title>
+        <title>Maximilian Franze-Soeln - Naked Mole Rat Research</title>
     </head>
     <body>
-        <h1>Maximilian Franze-Soeln</h1>
+        <h1>The Naked Mole Rat and its Cancer Research Potencial</h1>
         <img src="http://static.fjcdn.com/pictures/Naked+Mole+Rats_04e382_4730386.jpg"/>
-        <p>The greatest love of everyone</p>
+        <p style="font-size:29px;font-family:Serif">The greatest love of everyone</p>
+        <p style="font-size:19px">
+Scientists have discovered the naked mole rat's unique mechanism to staying cancer free -- a super sugar called high-molecular-mass Hyaluronan (HMM-HA). When secreted by the naked mole rat's cells, this molecule prevents cells from overcrowding and forming tumors. Researchers now say using naked mole-rat HMM-HA in the clinic could open up new avenues for cancer prevention and life extension in humans.
+</p>
     </body>
 </html>
